add some meta description

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/log.png" />
 
+    <title>Mardin Friseursalon – Professionelle Haarstyling in Itzehoe</title>
+    <meta
+      name="description"
+      content="Besuchen Sie den Mardin Friseursalon in Itzehoe für professionelle Haarschnitte, Styling und Farbbehandlungen."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mardin FriseurSalon</title>
   </head>
   <body>
     <div id="root"></div>
